# pacer-tests

./: .gitignore  model.xml  place-robot.sh  plugins.xml  run.sh  setup-tests.sh
BotBuilder/: CMakeLists.txt  matlabData.txt  task.xml
BotBuilder/Brittleness/Start/: plugins.xml  run.sh
BotBuilder/Brittleness/sample/: plugins.xml  run.sh  vars.xml.in
BotBuilder/Execute/: execute-play.sh  model-gen.xml.in  plugins.xml  vars.xml.in
BotBuilder/FrontEnd/: CMakeLists.txt  Makefile  cmake_install.cmake  debug.txt  editor  execute.sh  runTest.cpp  start  start.cpp
BotBuilder/Kinematics/: plugins.xml  run.sh  vars.xml.in
BotBuilder/Models/: model-big.xml  model-small.xml
BotBuilder/Models/Big_viz/: model-1.xml  vizdata_0x16b18c0.osg  vizdata_0x16be850.osg  vizdata_0x1957930.osg  vizdata_0x195fca0.osg  vizdata_0x1981f40.osg  vizdata_0x19c2ae0.osg  vizdata_0x25d7fb0.osg
BotBuilder/Models/Reasonable/: model-1.xml  vizdata_0x20a8ca0.osg  vizdata_0x20bb930.osg
BotBuilder/Models/Small_viz/: model-1.xml  vizdata_0x22eeb00.osg  vizdata_0x22ef250.osg  vizdata_0xf93090.osg  vizdata_0xf9fec0.osg
BotBuilder/Models/big_opt/: model-1.xml  vizdata_0x107dc30.osg  vizdata_0x1095db0.osg
BotBuilder/Models/small_opt/: model-1.xml  vizdata_0x1807ab0.osg
BotBuilder/Plugins/: error-check.cpp  goForward.cpp  poseListener.cpp  trajectory-table.cpp
BotBuilder/PoseSets/: 1-0.4-PoseSet.txt  big_final-0.3-PoseSet.txt  big_init-0.3-PoseSet.txt  small_final-0.3-PoseSet.txt  small_init-0.3-PoseSet.txt
BotBuilder/Scripts/: clean-dir.sh  generate-pic.sh  generate.sh  init.sh  moveOld.sh  myTest.sh  place-robot.sh  setInitVals.sh  setup-plugins-capt.sh  setup-plugins-play.sh
BotBuilder/Testing/: execute-play.sh  model-gen.xml.in  plugins.xml  vars.xml.in
BotBuilder/XML/: model-gen.xml  model.xml.in  plugins.xml  plugins.xml.capt  plugins.xml.play  sim-ground-model.xml  vars.xml  vars.xml.in  vizdata_0x116a140.osg  vizdata_0x1175870.osg  vizdata_0x1175a20.osg  vizdata_0x117aa60.osg  vizdata_0x117b600.osg  vizdata_0x117c520.osg  vizdata_0x117d100.osg  vizdata_0x117dce0.osg  vizdata_0x117eb60.osg  vizdata_0x117f770.osg  vizdata_0x1180310.osg  vizdata_0x1181230.osg  vizdata_0x1181e10.osg  vizdata_0x11829f0.osg  vizdata_0x1739510.osg  vizdata_0x174bc00.osg  vizdata_0x1a818e0.osg  vizdata_0x1a9bbb0.osg  vizdata_0x1c94c10.osg  vizdata_0x1cb87d0.osg  vizdata_0x1cde8e0.osg  vizdata_0x1ce2780.osg  vizdata_0x1d0a8a0.osg  vizdata_0x1d28200.osg  vizdata_0x1d79280.osg  vizdata_0x1e74bb0.osg  vizdata_0x23edea0.osg  vizdata_0xe4a170.osg
BotBuilder/XML-traj/: plugins.xml  plugins.xml.capt  plugins.xml.play  run.sh  vars.xml.in
bifurcation/: run-debug.sh  run.sh
falling/: plugins.xml  run-monte-carlo.sh  vars.xml.in
fixed-base/: model.xml  model.xml.in  plugins.xml  (+2 more)
fixed-base-real/: plugins.xml  vars.xml.in
fixed-base-sample/: plugins.xml  vars.xml.in
(+239 files in other folders)
