    CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

    PROJECT(example)

    FIND_PACKAGE(FLTK REQUIRED)
    FIND_PACKAGE(OpenGL REQUIRED)

    ADD_EXECUTABLE(start runTest.cpp)

    TARGET_LINK_LIBRARIES(start ${FLTK_LIBRARIES})
    TARGET_LINK_LIBRARIES(start ${OPENGL_LIBRARIES})

    ADD_EXECUTABLE(editor start.cpp)

    TARGET_LINK_LIBRARIES(editor ${FLTK_LIBRARIES})
    TARGET_LINK_LIBRARIES(editor ${OPENGL_LIBRARIES})

