    CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

    PROJECT(example)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

    FIND_PACKAGE(FLTK REQUIRED)
    FIND_PACKAGE(OpenGL REQUIRED)

    ADD_EXECUTABLE(start start.cpp)
    #TARGET_LINK_LIBRARIES(start ${FLTK_LIBRARIES} ${OPENGL_LIBRARIES} X11 dl Xext Xinerama Xft fontconfig Xcursor Xfixes)
    TARGET_LINK_LIBRARIES(start ${FLTK_LIBRARIES} ${OPENGL_LIBRARIES} dl)
    ADD_EXECUTABLE(editor runTest.cpp)
    #TARGET_LINK_LIBRARIES(editor ${FLTK_LIBRARIES} ${OPENGL_LIBRARIES} X11 dl Xext Xinerama Xft fontconfig Xcursor Xfixes)
    TARGET_LINK_LIBRARIES(editor ${FLTK_LIBRARIES} ${OPENGL_LIBRARIES} dl)

